# Pain_Mapper

./: README.md  pyproject.toml  requirements.txt  run.py
docs/: RELEASE_METHODS.md  VALIDATION.md
scripts/: apply_manual_labels.sh  run_fixed_pipeline.sh
src/formalin_population_embed_py/: __init__.py  analysis.py  cli.py  config.py  features.py  io_utils.py  mnn.py  motionmapper.py  pipeline.py  pose.py  utils.py
tests/: test_analysis_manual_labels.py  test_io_utils_flat_population.py  test_smoke.py
