[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "formalin-population-embed-py"
version = "0.2.0"
description = "Fixed-parameter population embedding with manual labeling outputs"
readme = "README.md"
requires-python = ">=3.10"
authors = [
  {name = "OpenAI"}
]
dependencies = [
  "numpy>=1.24",
  "scipy>=1.10",
  "pandas>=2.0",
  "scikit-learn>=1.3",
  "scikit-image>=0.21",
  "matplotlib>=3.7",
  "h5py>=3.8",
]

[project.scripts]
formalin-population-embed = "formalin_population_embed_py.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
